--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -191,6 +191,10 @@ data-url="http://beets.radbox.org/">tweet beets</a>
         data-gratipay-widget="button"
         src="//grtp.co/v1.js"></script>
 
+<!-- coinbase button -->
+<div class="cb-tip-button" data-content-location="http://beets.radbox.org" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="532ce1f562812e11390002e8"></div>
+<script>!function(d,s,id) {var js,cjs=d.getElementsByTagName(s)[0],e=d.getElementById(id);if(e){return;}js=d.createElement(s);js.id=id;js.src="https://www.coinbase.com/assets/tips.js";cjs.parentNode.insertBefore(js,cjs);}(document, 'script', 'coinbase-tips');</script>
+
                 </div>
 
             </div>
