--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -165,10 +165,11 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
 <section>
 <h3>Contact</h3>
 <p>
+    Need help with beets?
+    Have comments or questions?
     Contact <a href="http://groups.google.com/group/beets-users">the mailing
-    list</a> for help.
-    Or email <a href="mailto:adrian@radbox.org">Adrian Sampson</a> with
-    comments, questions, and fan mail.
+    list</a> or
+    <a href="https://github.com/sampsyo/beets/issues/new">file an issue on GitHub</a>.
     You can <a href="/donate.html">donate with PayPal or Bitcoin</a>,
     but please consider a donation to
     <a href="http://www.rootstrikers.org/donate">Rootstrikers</a> instead.
