--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,12 +2,8 @@
 <html>
     <head>
         <title>
-            beets:
-            {% if page.shorttitle %}
-                {{ page.shorttitle }}
-            {% else %}
-                {{ page.title }}
-            {% endif %}
+            beets: {% if page.shorttitle %}{{ page.shorttitle }}
+            {% else %}{{ page.title }}{% endif %}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
