Links to beets.io

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -177,14 +177,14 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
 <a href="http://twitter.com/share" class="twitter-share-button"
 data-text="Beets: an awesome open-source music library manager and MusicBrainz tagger."
 data-count="none" data-via="b33ts"
-data-url="http://beets.radbox.org/">tweet beets</a>
+data-url="{{site.url}}/">tweet beets</a>
 
 <!-- flattr button -->
 <a class="FlattrButton" style="display:none;"
-    rev="flattr;button:compact;" href="http://beets.radbox.org/"></a>
+    rev="flattr;button:compact;" href="{{site.url}}/"></a>
 
 <!-- coinbase button -->
-<div class="cb-tip-button" data-content-location="http://beets.radbox.org" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="532ce1f562812e11390002e8"></div>
+<div class="cb-tip-button" data-content-location="{{site.url}}" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="532ce1f562812e11390002e8"></div>
 <script>!function(d,s,id) {var js,cjs=d.getElementsByTagName(s)[0],e=d.getElementById(id);if(e){return;}js=d.createElement(s);js.id=id;js.src="https://www.coinbase.com/assets/tips.js";cjs.parentNode.insertBefore(js,cjs);}(document, 'script', 'coinbase-tips');</script>
 
                 </div>
