Restore Flattr link

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -181,7 +181,7 @@ data-url="{{site.url}}/">tweet beets</a>
 
 <!-- flattr button -->
 <a class="FlattrButton" style="display:none;"
-    rev="flattr;button:compact;" href="{{site.url}}/"></a>
+    rev="flattr;button:compact;" href="http://beets.radbox.org/"></a>
 
 <!-- coinbase button -->
 <div class="cb-tip-button" data-content-location="{{site.url}}" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="532ce1f562812e11390002e8"></div>
