--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -113,12 +113,12 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
 <h3>Project</h3>
 <ul class="project">
     <li>
-        <a href="http://github.com/sampsyo/beets">github</a>,
+        <a href="http://github.com/beetbox/beets">github</a>,
         <a href="http://bitbucket.org/adrian/beets">bitbucket</a>
     </li>
     <li><a href="http://beets.readthedocs.org/">documentation</a></li>
     <li><a href="http://beets.readthedocs.org/en/latest/faq.html">FAQ</a></li>
-    <li><a href="https://github.com/sampsyo/beets/issues">bug tracker</a></li>
+    <li><a href="https://github.com/beetbox/beets/issues">bug tracker</a></li>
     <li><a href="http://groups.google.com/group/beets-users">mailing
         list</a></li>
     <li><a href="/blog/">blog</a>, <a href="/blog/atom.xml">atom</a></li>
@@ -165,7 +165,7 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
     Have comments or questions?
     Contact <a href="http://groups.google.com/group/beets-users">the mailing
     list</a> or
-    <a href="https://github.com/sampsyo/beets/issues/new">file an issue on GitHub</a>.
+    <a href="https://github.com/beetbox/beets/issues/new">file an issue on GitHub</a>.
     You can <a href="/donate.html">donate with PayPal or Bitcoin</a>,
     but please consider a donation to
     <a href="http://www.rootstrikers.org/donate">Rootstrikers</a> instead.
@@ -192,7 +192,7 @@ data-url="{{site.url}}/">tweet beets</a>
             </div>
         </div>
 
-        <a id="fork-me" href="https://github.com/sampsyo/beets">Fork me on GitHub</a>
+        <a id="fork-me" href="https://github.com/beetbox/beets">Fork me on GitHub</a>
         <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
