Add dates to blog posts (#1998)

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -78,6 +78,7 @@
 {{ content }}
 {% if page.section == 'blog' %}
 <p class="articleFooter">
+This post was published on {{ page.date | date: '%B %-d, %Y' }}.
 Have comments or questions?
 <a href="mailto:adrian@radbox.org">Send me an email</a>,
 tweet at <a href="http://twitter.com/b33ts">@b33ts</a>,
