Send comments to the mailing list
We are a hive mind!

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -80,7 +80,8 @@
 <p class="articleFooter">
 This post was published on {{ page.date | date: '%B %-d, %Y' }}.
 Have comments or questions?
-<a href="mailto:adrian@radbox.org">Send me an email</a>,
+Send mail to
+<a href="mailto:beets-users@googlegroups.com">the mailing list</a>,
 tweet at <a href="http://twitter.com/b33ts">@b33ts</a>,
 or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}{{ page.url | cgi_escape }}&t={{ page.title | cgi_escape }}">discuss on Hacker News</a>.
 </p>
