Remove Google+ script include

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -195,7 +195,8 @@ data-url="{{site.url}}/">tweet beets</a>
         </div>
 
         <a id="fork-me" href="https://github.com/beetbox/beets">Fork me on GitHub</a>
-        <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
+
+        <!-- Tweet button script. -->
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
 </html>
