Remove broken Coinbase tip button

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -184,11 +184,7 @@ data-url="{{site.url}}/">tweet beets</a>
 <!-- flattr button -->
 <a class="FlattrButton" style="display:none;"
     rev="flattr;button:compact;" href="http://beets.radbox.org/"></a>
-
-<!-- coinbase button -->
-<div class="cb-tip-button" data-content-location="{{site.url}}" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="532ce1f562812e11390002e8"></div>
-<script>!function(d,s,id) {var js,cjs=d.getElementsByTagName(s)[0],e=d.getElementById(id);if(e){return;}js=d.createElement(s);js.id=id;js.src="https://www.coinbase.com/assets/tips.js";cjs.parentNode.insertBefore(js,cjs);}(document, 'script', 'coinbase-tips');</script>
-
+</section>
                 </div>
 
             </div>
