Remove BitBucket link (fix #2110)

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -91,8 +91,7 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
 <h3>Project</h3>
 <ul class="project">
     <li>
-        <a href="http://github.com/beetbox/beets">github</a>,
-        <a href="http://bitbucket.org/adrian/beets">bitbucket</a>
+        <a href="http://github.com/beetbox/beets">github</a>
     </li>
     <li><a href="http://beets.readthedocs.org/">documentation</a></li>
     <li><a href="http://beets.readthedocs.org/en/latest/faq.html">FAQ</a></li>
