Link to Discourse

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -56,8 +56,8 @@
 <p class="articleFooter">
 This post was published on {{ page.date | date: '%B %-d, %Y' }}.
 Have comments or questions?
-Send mail to
-<a href="mailto:beets-users@googlegroups.com">the mailing list</a>,
+Post on
+<a href="http://discourse.beets.io">the discussion board</a>,
 tweet at <a href="http://twitter.com/b33ts">@b33ts</a>,
 or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}{{ page.url | cgi_escape }}&t={{ page.title | cgi_escape }}">discuss on Hacker News</a>.
 </p>
@@ -96,6 +96,7 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
     <li><a href="http://beets.readthedocs.org/">documentation</a></li>
     <li><a href="http://beets.readthedocs.org/en/latest/faq.html">FAQ</a></li>
     <li><a href="https://github.com/beetbox/beets/issues">bug tracker</a></li>
+    <li><a href="http://discourse.beets.io">discussion board</a></li>
     <li><a href="http://groups.google.com/group/beets-users">mailing
         list</a></li>
     <li><a href="/blog/">blog</a>, <a href="/blog/atom.xml">atom</a></li>
