--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -141,8 +141,7 @@ or <a href="http://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}
 <p>
     Need help with beets?
     Have comments or questions?
-    Contact <a href="http://groups.google.com/group/beets-users">the mailing
-    list</a> or
+    Post on <a href="http://discourse.beets.io">the discussion board</a> or
     <a href="https://github.com/beetbox/beets/issues/new">file an issue on GitHub</a>.
     You can <a href="/donate.html">donate with PayPal or Bitcoin</a>,
     but please consider a donation to
