--- a/beetsplug/web/templates/index.html
+++ b/beetsplug/web/templates/index.html
@@ -20,7 +20,7 @@
 
                 <button class="disabled">&#9654;</button>
                 <button class="play">&#9654;</button>
-                <button class="pause" style="letter-spacing: 1px;">&#10073;&#10073;</button>
+                <button class="pause" style="letter-spacing: 1px;">&#9208;</button>
 
                 <span class="times">
                     <span class="currentTime">
